# pg_mooncake

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  LICENSE  Makefile  Makefile.build  README.md  build.rs  pg_mooncake.control  test.parquet
.devcontainer/: .bashrc  .psqlrc  Dockerfile  Dockerfile_14  Dockerfile_15  Dockerfile_16  Dockerfile_17  devcontainer.json  postCreateCommand.sh  postStartCommand.sh  postgres.conf
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.md  epic.yml  feature_request.yml
rust_extensions/delta/: Cargo.toml  build.rs
scripts/: reload-extension.sh
sql/: pg_mooncake--0.0.1.sql  pg_mooncake--0.1.0--0.1.1.sql  pg_mooncake--0.1.0.sql  pg_mooncake--0.1.1--0.1.2.sql  pg_mooncake--0.1.1--0.2.0.sql
src/: bgworker.rs  columnstore_functions.cpp  columnstore_handler.cpp  columnstore_handler.hpp  copy.cpp  duckdb_hooks.cpp  duckdb_mooncake.rs  duckdb_scan.cpp  duckdb_scan.hpp  ffi.rs  functions.rs  gucs.rs  json_parser.cpp  lib.cpp  lib.hpp  lib.rs  pg_interface.cpp  pg_mooncake.cpp  pgmooncake.cpp  pgmooncake_guc.hpp  pgmoonlink.rs  table.rs  utils.rs
src/columnstore/: columnstore.cpp  columnstore.hpp  columnstore_delete.cpp  columnstore_deletion_vector.cpp  columnstore_deletion_vector.hpp  columnstore_hooks.cpp  columnstore_insert.cpp  columnstore_metadata.cpp  columnstore_metadata.hpp  columnstore_read.cpp  columnstore_read.hpp  columnstore_read_cache_filesystem.cpp  columnstore_read_cache_filesystem.hpp  columnstore_routine.cpp  columnstore_scan.cpp  columnstore_statistics.cpp  columnstore_statistics.hpp  columnstore_stats.hpp  columnstore_storage.cpp  columnstore_storage.hpp  columnstore_table.cpp  columnstore_table.hpp  (+6 more)
test/: json_parser_test.cpp
tests/: README.md  run_stress_test.sh  stress_test.py  stress_test.rs
(+119 files in other folders)
