[package]
name = "pg_mooncake"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_mooncake"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
bincode = "2"
moonlink_backend.path = "moonlink/src/moonlink_backend"
pgrx = "0.14.3"
postgres.git = "https://github.com/Mooncake-Labs/rust-postgres.git"
regex = "1"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"
