[package]
name = "pg_mooncake"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_mooncake"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["bgworker", "pg17"]
bgworker = ["moonlink_service"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
bincode = "2"
moonlink_rpc.path = "moonlink/src/moonlink_rpc"
moonlink_service = { path = "moonlink/src/moonlink_service", optional = true }
pgrx = "0.15.0"
postgres.git = "https://github.com/Mooncake-Labs/rust-postgres.git"
regex = "1"
tokio = "1.46"

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"
